Revise index.html for English Learning Materials
Updated the website title and content to focus on English learning materials, modified styles, and adjusted video section details.

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Video Website</title>
+    <title>Enhlish Learning Materials</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #f4f4f4;
+            background: #7385d667;
             padding: 20px;
         }
 
         .video-section {
-            background: white;
+            background: black;
             padding: 15px;
             margin-bottom: 20px;
             border-radius: 8px;
@@ -32,48 +32,20 @@
 </head>
 <body>
 
-<h1>My Project Videos</h1>
-<p>This website shows my project videos with explanations.</p>
+<h1>Enhlish Learning Materials</h1>
+<p>This website shows a more detailed explanations of the slang use in the video.</p>
 
 <div class="video-section">
-    <h2>Video 1: Introduction</h2>
+    <h2>Video 1: Slanguage</h2>
     <video controls>
         <source src="video1.mp4" type="video/mp4">
-        Your browser does not support video.
+        our browser does not support the video tag.
     </video>
     <p>This video introduces the project.</p>
 
     <details>
         <summary>More information</summary>
         <p>This video explains the background and goals of the project.</p>
-    </details>
-</div>
-
-<div class="video-section">
-    <h2>Video 2: Demonstration</h2>
-    <video controls>
-        <source src="video2.mp4" type="video/mp4">
-        Your browser does not support video.
-    </video>
-    <p>This video demonstrates how it works.</p>
-
-    <details>
-        <summary>More information</summary>
-        <p>This part shows how the system behaves step by step.</p>
-    </details>
-</div>
-
-<div class="video-section">
-    <h2>Video 3: Results</h2>
-    <video controls>
-        <source src="video3.mp4" type="video/mp4">
-        Your browser does not support video.
-    </video>
-    <p>This video shows the results.</p>
-
-    <details>
-        <summary>More information</summary>
-        <p>This video discusses the outcome and conclusions.</p>
     </details>
 </div>
 
