Refactor index.html for improved content and structure
Updated the title and content for clarity, changed video element to iframe for YouTube embedding, and adjusted styles.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Enhlish Learning Materials</title>
+    <title>English Learning Materials</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,13 +16,16 @@
             margin-bottom: 20px;
             border-radius: 8px;
             box-shadow: 0 0 5px rgba(0,0,0,0.1);
+            color: white;
         }
 
-        video {
+        iframe {
             width: 100%;
             max-width: 600px;
+            height: 338px;
             display: block;
             margin-bottom: 10px;
+            border: none;
         }
 
         details {
@@ -32,15 +35,17 @@
 </head>
 <body>
 
-<h1>Enhlish Learning Materials</h1>
-<p>This website shows a more detailed explanations of the slang use in the video.</p>
+<h1>English Learning Materials</h1>
+<p>This website shows more detailed explanations of the slang used in the video.</p>
 
 <div class="video-section">
-    <h2>Video 1: Slanguage</h2>
-    <video controls>
-        <source src="video1.mp4" type="video/mp4">
-        our browser does not support the video tag.
-    </video>
+    <h2>Video 1: Slang Usage</h2>
+
+    <iframe 
+        src="https://www.youtube.com/embed/awagCuWdMRk"
+        allowfullscreen>
+    </iframe>
+
     <p>This video introduces the project.</p>
 
     <details>
@@ -51,3 +56,4 @@
 
 </body>
 </html>
+
