--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
 
         .video-section {
-            background: black;
+            background: white;
             padding: 15px;
             margin-bottom: 20px;
             border-radius: 8px;
@@ -56,4 +56,5 @@
 
 </body>
 </html>
+
 
