--- a/index.html
+++ b/index.html
@@ -3,37 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <title>English Learning Materials</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #7385d667;
+            background: linear-gradient(120deg, #7385d6, #9ad0ec);
             padding: 20px;
+            animation: fadeIn 1.2s ease-in;
+        }
+
+        h1 {
+            text-align: center;
+            color: white;
+            animation: slideDown 1s ease;
+        }
+
+        p {
+            text-align: center;
+            color: #f0f0f0;
         }
 
         .video-section {
             background: white;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.1);
-            color: white;
+            padding: 20px;
+            margin: 30px auto;
+            border-radius: 12px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+            max-width: 700px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .video-section:hover {
+            transform: scale(1.03);
+            box-shadow: 0 15px 30px rgba(0,0,0,0.3);
+        }
+
+        h2 {
+            color: #333;
+            text-align: center;
         }
 
         iframe {
             width: 100%;
-            max-width: 600px;
-            height: 338px;
+            height: 350px;
             display: block;
-            margin-bottom: 10px;
-            border: none;
+            margin: 15px auto;
+            border-radius: 10px;
         }
 
         details {
-            margin-top: 10px;
+            margin-top: 15px;
+            background: #f3f6ff;
+            padding: 10px;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
+        summary {
+            font-weight: bold;
+            color: #4a5edb;
+        }
+
+        details p {
+            color: #333;
+            text-align: left;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from {opacity: 0;}
+            to {opacity: 1;}
+        }
+
+        @keyframes slideDown {
+            from {transform: translateY(-30px); opacity: 0;}
+            to {transform: translateY(0); opacity: 1;}
+        }
+
+        /* Floating background circles */
+        .bubble {
+            position: fixed;
+            bottom: -100px;
+            background: rgba(255,255,255,0.2);
+            border-radius: 50%;
+            animation: floatUp 20s infinite linear;
+        }
+
+        @keyframes floatUp {
+            from {transform: translateY(0);}
+            to {transform: translateY(-120vh);}
         }
     </style>
 </head>
 <body>
+
+<!-- Floating bubbles -->
+<div class="bubble" style="width:60px;height:60px;left:10%;animation-duration:18s;"></div>
+<div class="bubble" style="width:40px;height:40px;left:40%;animation-duration:22s;"></div>
+<div class="bubble" style="width:80px;height:80px;left:70%;animation-duration:25s;"></div>
 
 <h1>English Learning Materials</h1>
 <p>This website shows more detailed explanations of the slang used in the video.</p>
@@ -42,19 +109,22 @@
     <h2>Video 1: Slang Usage</h2>
 
     <iframe 
-        src="https://www.youtube.com/embed/awagCuWdMRk"
+        src="https://www.youtube.com/embed/G3rhzaizkVg"
         allowfullscreen>
     </iframe>
 
-    <p>This video introduces the project.</p>
+    <p style="color:#333; text-align:center;">
+        This video shows usages of some modern slang words.
+    </p>
 
     <details>
         <summary>More information</summary>
-        <p>This video explains the background and goals of the project.</p>
+        <p>
+            This video explains how slang words are used in daily conversations and how their meanings
+            change depending on context.
+        </p>
     </details>
 </div>
 
 </body>
 </html>
-
-
