--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         p {
             text-align: center;
-            color: #d920f1;
+            color: white;
         }
 
         .video-section {
@@ -123,46 +123,66 @@
              <p><b>W (Win)</b><br>
     English: Means success or victory.<br>
     Thai: หมายถึง ชนะ หรือ ประสบความสำเร็จ<br>
-    Example: That test was a W. (สอบครั้งนั้นคือชัยชนะ)
-            That goal was a W for our team. (เป้าหมาขนั้นคือชัยชนะของทีมเรา)
-            Passing the interview felt like a W. (การผ่านสัมภาษณ์รู้สึกเหมือนเป็นไชชนะครั้งใหญ่)
-            Getting a discount is always a W. (ได้ส่วนลดถือว่าเป็นเรื่องดีมาก)
+    Example: That test was a W. 
+                 (สอบครั้งนั้นคือชัยชนะ)
+            That goal was a W for our team. 
+                 (เป้าหมาขนั้นคือชัยชนะของทีมเรา)
+            Passing the interview felt like a W. 
+                 (การผ่านสัมภาษณ์รู้สึกเหมือนเป็นไชชนะครั้งใหญ่)
+            Getting a discount is always a W. 
+                 (ได้ส่วนลดถือว่าเป็นเรื่องดีมาก)
     </p>
 
     <p><b>L (Loss)</b><br>
     English: Means failure or bad result.<br>
     Thai: หมายถึง แพ้ หรือ ผลลัพธ์ไม่ดี<br>
-    Example: Forgetting my homework was an L. (ลืมการบ้านคือความผิดพลาด)
-            Losing my phone was a big L. (การทำโทรศัพท์หายคือความพลาดครั้งใหญ่)
-            Failing the test was an L. (การสอบตกคือความล้มเหลว)
-            Waking up late today was an L. (การตื่นสายวันนี้คือความพลาด)
+    Example: Forgetting my homework was an L. 
+                (ลืมการบ้านคือความผิดพลาด)
+            Losing my phone was a big L.
+                (การทำโทรศัพท์หายคือความพลาดครั้งใหญ่)
+            Failing the test was an L. 
+                (การสอบตกคือความล้มเหลว)
+            Waking up late today was an L. 
+                (การตื่นสายวันนี้คือความพลาด)
     </p>
 
     <p><b>GOAT (Greatest Of All Time)</b><br>
     English: Means the best person ever at something.<br>
     Thai: หมายถึง สุดยอดที่สุดตลอดกาล<br>
-    Example: She is the GOAT of this game. (เธอคือที่สุดของเกมนี้)
-            Michael Jordan is the GOAT of basketball. (ไมเคิล จอร์แดน คือที่สุดตลอดกาลของบาสเกตบอล)
-            She is the GOAT at solving math problems. (เธอคือที่สุดตลอดกาลด้านการแก้โจทย์คณิตศาสตร์)
-            That singer is the GOAT in this genre. (นักร้องคนนั้นคือที่สุดในแนวนี้)
+    Example: She is the GOAT of this game. 
+                (เธอคือที่สุดของเกมนี้)
+            Michael Jordan is the GOAT of basketball.
+                (ไมเคิล จอร์แดน คือที่สุดตลอดกาลของบาสเกตบอล)
+            She is the GOAT at solving math problems. 
+                (เธอคือที่สุดตลอดกาลด้านการแก้โจทย์คณิตศาสตร์)
+            That singer is the GOAT in this genre. 
+                (นักร้องคนนั้นคือที่สุดในแนวนี้)
     </p>
 
     <p><b>MID</b><br>
     English: Means average or not very good, ofthen used in a condescending or dismissivetone.<br>
     Thai: หมายถึง ธรรมดา ไม่ค่อยดี<br>
-    Example: That song is mid. (เพลงนั้นเฉยมาก)
-            The food was mid, not worth the price. (อาหารเฉยๆ ไม่คุ้มราคา)
-            The game was mid, I expected more. (เกมนั้นเฉยๆ ฉันคาดหวังมากกว่านี้)
-            The movie was mid, but the acting was good. (หนังเรื่องนั้นเฉยๆ แต่การแสดงดี)
+    Example: That song is mid.
+                (เพลงนั้นเฉยมาก)
+            The food was mid, not worth the price.
+                (อาหารเฉยๆ ไม่คุ้มราคา)
+            The game was mid, I expected more.
+                (เกมนั้นเฉยๆ ฉันคาดหวังมากกว่านี้)
+            The movie was mid, but the acting was good. 
+                (หนังเรื่องนั้นเฉยๆ แต่การแสดงดี)
     </p>
 
     <p><b>SLAY</b><br>
     English: Means to do something very well or look great, or completely dominate a situation.<br>
     Thai: หมายถึง ทำได้ดีมาก หรือ ดูดีมาก<br>
-    Example: You slayed that presentation. (คุณพรีเซนต์ได้ดีมาก)
-            You slayed that dance routine. (คุณเต้นได้ดีมากในท่านั้น)
-            She slayed her final exam. (เธอทำข้อสอบปลายภาคได้ดีมาก)
-            They slayed the fashion show tonight. (พวกเขาทำโชว์แฟชั่นคืนนี้ออกมาได้ยอดเยี่ยม)
+    Example: You slayed that presentation.
+                (คุณพรีเซนต์ได้ดีมาก)
+            You slayed that dance routine.
+                (คุณเต้นได้ดีมากในท่านั้น)
+            She slayed her final exam. 
+                (เธอทำข้อสอบปลายภาคได้ดีมาก)
+            They slayed the fashion show tonight. 
+                (พวกเขาทำโชว์แฟชั่นคืนนี้ออกมาได้ยอดเยี่ยม)
     </p>
         </p>
     </details>
@@ -170,4 +190,5 @@
 
 </body>
 </html>
+
 
