Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -123,66 +123,66 @@
              <p><b>W (Win)</b><br>
     English: Means success or victory.<br>
     Thai: หมายถึง ชนะ หรือ ประสบความสำเร็จ<br>
-    Example: That test was a W. 
-                 (สอบครั้งนั้นคือชัยชนะ)
-            That goal was a W for our team. 
-                 (เป้าหมาขนั้นคือชัยชนะของทีมเรา)
-            Passing the interview felt like a W. 
-                 (การผ่านสัมภาษณ์รู้สึกเหมือนเป็นไชชนะครั้งใหญ่)
-            Getting a discount is always a W. 
+    Example: That test was a W.<br> 
+                 (สอบครั้งนั้นคือชัยชนะ)<br>
+            That goal was a W for our team.<br> 
+                 (เป้าหมาขนั้นคือชัยชนะของทีมเรา)<br>
+            Passing the interview felt like a W.<br> 
+                 (การผ่านสัมภาษณ์รู้สึกเหมือนเป็นไชชนะครั้งใหญ่)<br>
+            Getting a discount is always a W.<br> 
                  (ได้ส่วนลดถือว่าเป็นเรื่องดีมาก)
     </p>
 
     <p><b>L (Loss)</b><br>
     English: Means failure or bad result.<br>
     Thai: หมายถึง แพ้ หรือ ผลลัพธ์ไม่ดี<br>
-    Example: Forgetting my homework was an L. 
-                (ลืมการบ้านคือความผิดพลาด)
-            Losing my phone was a big L.
-                (การทำโทรศัพท์หายคือความพลาดครั้งใหญ่)
-            Failing the test was an L. 
-                (การสอบตกคือความล้มเหลว)
-            Waking up late today was an L. 
+    Example: Forgetting my homework was an L.<br> 
+                (ลืมการบ้านคือความผิดพลาด)<br>
+            Losing my phone was a big L.<br>
+                (การทำโทรศัพท์หายคือความพลาดครั้งใหญ่)<br>
+            Failing the test was an L.<br> 
+                (การสอบตกคือความล้มเหลว)<br>
+            Waking up late today was an L.<br> 
                 (การตื่นสายวันนี้คือความพลาด)
     </p>
 
     <p><b>GOAT (Greatest Of All Time)</b><br>
     English: Means the best person ever at something.<br>
     Thai: หมายถึง สุดยอดที่สุดตลอดกาล<br>
-    Example: She is the GOAT of this game. 
-                (เธอคือที่สุดของเกมนี้)
-            Michael Jordan is the GOAT of basketball.
-                (ไมเคิล จอร์แดน คือที่สุดตลอดกาลของบาสเกตบอล)
-            She is the GOAT at solving math problems. 
-                (เธอคือที่สุดตลอดกาลด้านการแก้โจทย์คณิตศาสตร์)
-            That singer is the GOAT in this genre. 
+    Example: She is the GOAT of this game.<br> 
+                (เธอคือที่สุดของเกมนี้)<br>
+            Michael Jordan is the GOAT of basketball.<br>
+                (ไมเคิล จอร์แดน คือที่สุดตลอดกาลของบาสเกตบอล)<br>
+            She is the GOAT at solving math problems.<br> 
+                (เธอคือที่สุดตลอดกาลด้านการแก้โจทย์คณิตศาสตร์)<br>
+            That singer is the GOAT in this genre.<br> 
                 (นักร้องคนนั้นคือที่สุดในแนวนี้)
     </p>
 
     <p><b>MID</b><br>
     English: Means average or not very good, ofthen used in a condescending or dismissivetone.<br>
     Thai: หมายถึง ธรรมดา ไม่ค่อยดี<br>
-    Example: That song is mid.
-                (เพลงนั้นเฉยมาก)
-            The food was mid, not worth the price.
-                (อาหารเฉยๆ ไม่คุ้มราคา)
-            The game was mid, I expected more.
-                (เกมนั้นเฉยๆ ฉันคาดหวังมากกว่านี้)
-            The movie was mid, but the acting was good. 
-                (หนังเรื่องนั้นเฉยๆ แต่การแสดงดี)
+    Example: That song is mid.<br>
+                (เพลงนั้นเฉยมาก)<br>
+            The food was mid, not worth the price.<br>
+                (อาหารเฉยๆ ไม่คุ้มราคา)<br>
+            The game was mid, I expected more.<br>
+                (เกมนั้นเฉยๆ ฉันคาดหวังมากกว่านี้)<br>
+            The movie was mid, but the acting was good.<br> 
+                (หนังเรื่องนั้นเฉยๆ แต่การแสดงดี)<br>
     </p>
 
     <p><b>SLAY</b><br>
     English: Means to do something very well or look great, or completely dominate a situation.<br>
     Thai: หมายถึง ทำได้ดีมาก หรือ ดูดีมาก<br>
-    Example: You slayed that presentation.
-                (คุณพรีเซนต์ได้ดีมาก)
-            You slayed that dance routine.
-                (คุณเต้นได้ดีมากในท่านั้น)
-            She slayed her final exam. 
-                (เธอทำข้อสอบปลายภาคได้ดีมาก)
-            They slayed the fashion show tonight. 
-                (พวกเขาทำโชว์แฟชั่นคืนนี้ออกมาได้ยอดเยี่ยม)
+    Example: You slayed that presentation.<br>
+                (คุณพรีเซนต์ได้ดีมาก)<br>
+            You slayed that dance routine.<br>
+                (คุณเต้นได้ดีมากในท่านั้น)<br>
+            She slayed her final exam.<br> 
+                (เธอทำข้อสอบปลายภาคได้ดีมาก)<br>
+            They slayed the fashion show tonight.<br> 
+                (พวกเขาทำโชว์แฟชั่นคืนนี้ออกมาได้ยอดเยี่ยม)<br>
     </p>
         </p>
     </details>
@@ -190,5 +190,6 @@
 
 </body>
 </html>
+
 
 
